--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "dist"
   ],
   "devDependencies": {
-    "browserslist": "^4.9.1",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
     "hyperapp": "^2.0.4",
     "jsdom": "^16.2.1",
     "jsdom-global": "^3.0.2",
-    "mdn-browser-compat-data": "^1.0.12",
     "nyc": "^15.0.0",
     "preact": "^10.3.4",
     "rollup": "^2.0.6",
@@ -35,6 +33,7 @@
     "testmatrix": "^0.1.2"
   },
   "keywords": [
+    "morpho",
     "css-in-js",
     "css",
     "hyperapp",
