--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@morpho/core",
+  "alias": "core",
   "version": "0.1.0",
   "description": "Core logic in morpho for creating and caching scoped css classes",
-  "main": "index.js",
+  "main": "src/index.js",
+  "unpkg": "src/index.js",
+  "module": "src/index.js",
   "scripts": {
-    "test": "cross-env-shell ../../node_modules/.bin/nyc -i esm -r lcov ../../node_modules/.bin/testmatrix test/core.test.js && cross-env-shell ../../node_modules/.bin/nyc report"
+    "test": "cross-env-shell ../../node_modules/.bin/nyc -i esm -r lcov ../../node_modules/.bin/testmatrix test/core.test.js && cross-env-shell ../../node_modules/.bin/nyc report",
+    "build": "npm run bundle && npm run minify",
+    "bundle": "cross-env-shell DIR=$PKG PKG=$npm_package_alias ../../node_modules/.bin/rollup -i ${DIR}$npm_package_module -o ${DIR}dist/$PKG.js --no-esModule -mf iife -n $PKG",
+    "minify": "cross-env-shell DIR=$PKG PKG=$npm_package_alias ../../node_modules/.bin/terser ${DIR}dist/$PKG.js -o ${DIR}dist/$PKG.js -mc --source-map includeSources,url=$PKG.js.map"
   },
   "repository": {
     "type": "git",
@@ -13,6 +19,7 @@
   "keywords": [
     "morpho",
     "css-in-js",
+    "@morpho/core",
     "css",
     "hyperapp",
     "react"
