--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build": "npm run index && npm run bundle && npm run minify",
     "index": "node ./util/createIndex.js",
     "bundle": "cross-env-shell DIR=$PKG PKG=$npm_package_name rollup -i ${DIR}$npm_package_module -o ${DIR}dist/$PKG.js --no-esModule -mf iife -n $PKG",
-    "minify": "cross-env-shell DIR=$PKG PKG=$npm_package_name terser ${DIR}dist/$PKG.js -o ${DIR}dist/$PKG.js -mc --source-map includeSources,url=$PKG.js.map",
-    "build-site": "cd docs && npm run build"
+    "minify": "cross-env-shell DIR=$PKG PKG=$npm_package_name terser ${DIR}dist/$PKG.js -o ${DIR}dist/$PKG.js -mc --source-map includeSources,url=$PKG.js.map"
   },
   "files": [
     "src",
