--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "browser": "src/index.js",
   "scripts": {
     "test": "nyc -i esm -r lcov testmatrix test/morpho.test.js && nyc report",
-    "build": "npm run index && npm run bundle && npm run minify",
-    "index": "node ./util/createIndex.js",
+    "build": "npm run bundle && npm run minify",
     "bundle": "cross-env-shell DIR=$PKG PKG=$npm_package_name rollup -i ${DIR}$npm_package_module -o ${DIR}dist/$PKG.js --no-esModule -mf iife -n $PKG",
     "minify": "cross-env-shell DIR=$PKG PKG=$npm_package_name terser ${DIR}dist/$PKG.js -o ${DIR}dist/$PKG.js -mc --source-map includeSources,url=$PKG.js.map"
   },
