--- a/lib/unit/package.json
+++ b/lib/unit/package.json
@@ -3,6 +3,7 @@
   "alias": "unit",
   "version": "0.1.0",
   "description": "Adds default units for css properties with numerical values",
+  "homepage": "https://github.com/B-Teague/morpho#readme",
   "main": "src/index.js",
   "unpkg": "src/index.js",
   "module": "src/index.js",
