--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "morpho",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "A tiny CSS-in-JS library using Javascript objects.",
   "author": "Brian Teague",
   "homepage": "https://github.com/B-Teague/morpho#readme",
@@ -39,6 +39,7 @@
     "morpho",
     "css-in-js",
     "css",
+    "vendor",
     "hyperapp",
     "react"
   ],
