--- a/lib/css-functions/package.json
+++ b/lib/css-functions/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "morpho-unit",
-  "alias": "unit",
+  "name": "morpho-css-functions",
+  "alias": "functions",
   "version": "0.3.0",
-  "description": "Adds default units for css properties with numerical values",
+  "description": "Adds common css functions",
   "main": "src/index.js",
   "unpkg": "src/index.js",
   "module": "src/index.js",
   "scripts": {
-    "test": "cross-env-shell ../../node_modules/.bin/nyc -i esm -r lcov ../../node_modules/.bin/testmatrix test/unit.test.js && cross-env-shell ../../node_modules/.bin/nyc report",
+    "test": "cross-env-shell ../../node_modules/.bin/nyc -i esm -r lcov ../../node_modules/.bin/testmatrix test/css-functions.test.js && cross-env-shell ../../node_modules/.bin/nyc report",
     "build": "npm run bundle && npm run minify",
     "createIndex": "node ./util/createIndex.js",
     "bundle": "cross-env-shell DIR=$PKG PKG=$npm_package_alias ../../node_modules/.bin/rollup -i ${DIR}$npm_package_module -o ${DIR}dist/$PKG.js --no-esModule -mf iife -n $PKG",
@@ -20,7 +20,7 @@
   "keywords": [
     "morpho",
     "css-in-js",
-    "unit",
+    "css-functions",
     "css",
     "hyperapp",
     "react"
