--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.3.0",
   "description": "A tiny CSS-in-JS library using Javascript objects.",
   "author": "Brian Teague",
-  "homepage": "https://github.com/B-Teague/morpho#readme",
-  "repository": "B-Teague/morpho",
   "license": "MIT",
   "main": "src/index.js",
   "module": "src/index.js",
@@ -12,8 +10,7 @@
   "browser": "src/index.js",
   "scripts": {
     "test": "nyc -i esm -r lcov testmatrix test/morpho.test.js && nyc report",
-    "build": "npm run createIndex && npm run bundle && npm run minify",
-    "createIndex": "node ./util/createIndex.js",
+    "build": "npm run bundle && npm run minify",
     "bundle": "cross-env-shell DIR=$PKG PKG=$npm_package_name rollup -i ${DIR}$npm_package_module -o ${DIR}dist/$PKG.js --no-esModule -mf iife -n $PKG",
     "minify": "cross-env-shell DIR=$PKG PKG=$npm_package_name terser ${DIR}dist/$PKG.js -o ${DIR}dist/$PKG.js -mc --source-map includeSources,url=$PKG.js.map"
   },
@@ -31,15 +28,12 @@
     "preact": "^10.3.4",
     "rollup": "^2.0.6",
     "terser": "^4.6.6",
-    "testmatrix": "^0.1.2",
-    "browserslist": "^4.11.0",
-    "mdn-browser-compat-data": "^1.0.15"
+    "testmatrix": "^0.1.2"
   },
   "keywords": [
     "morpho",
     "css-in-js",
     "css",
-    "vendor",
     "hyperapp",
     "react"
   ],
